update config files to ignore node_modules for tsc and eslint

--- a/base.tsconfig.json
+++ b/base.tsconfig.json
@@ -16,6 +16,7 @@
         "noErrorTruncation": true,
         "noImplicitReturns": true,
         "noImplicitThis": true,
-        "preserveConstEnums": true
+        "preserveConstEnums": true,
+        "skipLibCheck": true
     }
 }
