--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,10 +2,12 @@
     "extends": "./base.tsconfig.json",
     // NOTE: Everything except what you want compiled into JS should be in the exclusions.
     "compilerOptions": {
-        "outDir": "./dist"
+        "outDir": "./dist",
+        "skipLibCheck": true
     },
     "exclude": [
         "node_modules",
+        "**/node_modules",
         "gulpfiles",
         "dist"
     ],
