--- a/.depcheckrc.yml
+++ b/.depcheckrc.yml
@@ -6,3 +6,9 @@ ignores:
   - retry # Use OperationOptions from retry in templates but not recognized by depcheck
   - '@types/retry' # Corresponds to retry
   - '@openapitools/openapi-generator-cli' # Used by openapi-generator-cli in `npm run renderTemplates`
+  - '@types/node-fetch' # Used by multiple files for fetch types
+  - chai # Used by multiple files for testing
+  - sinon # Used by multiple files for testing
+  - nock # Used by multiple files for testing to mock API calls
+  - handlebars # Used by generation script to generate version.ts and top level index.ts files
+  - fs-extra # Used by generation script and updateApis script
