revert some changes

--- a/base.tsconfig.json
+++ b/base.tsconfig.json
@@ -16,7 +16,6 @@
         "noErrorTruncation": true,
         "noImplicitReturns": true,
         "noImplicitThis": true,
-        "preserveConstEnums": true,
-        "skipLibCheck": true
+        "preserveConstEnums": true
     }
 }
