revert tsconfig change

--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     ]
   },
   "resolutions": {
-    "@rdfjs/types": "v1.1.2"
+    "@rdfjs/types": "v2.0.1"
   },
   "dependencies": {
     "@commerce-apps/core": "^1.8.0",
@@ -83,7 +83,7 @@
     "typedoc": "^0.17.8",
     "typedoc-plugin-external-module-map": "1.2.1",
     "typedoc-plugin-nojekyll": "^1.0.1",
-    "typescript": "^4.4.4"
+    "typescript": "5.1"
   },
   "publishConfig": {
     "access": "public"
