update typescript version

--- a/package.json
+++ b/package.json
@@ -83,7 +83,7 @@
     "typedoc": "^0.17.8",
     "typedoc-plugin-external-module-map": "1.2.1",
     "typedoc-plugin-nojekyll": "^1.0.1",
-    "typescript": "5.1"
+    "typescript": "~5.1.0"
   },
   "publishConfig": {
     "access": "public"
