--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     ]
   },
   "resolutions": {
-    "@rdfjs/types": "v1.1.2"
+    "@rdfjs/types": "v2.0.1"
   },
   "dependencies": {
     "@commerce-apps/core": "^1.8.0",
@@ -57,12 +57,9 @@
   "devDependencies": {
     "@commerce-apps/raml-toolkit": "^0.7.0",
     "@istanbuljs/nyc-config-typescript": "^1.0.2",
-    "@types/chai": "^4.3.0",
-    "@types/fs-extra": "^9.0.13",
     "@types/mocha": "^8.2.3",
     "@types/node-fetch": "^2.5.12",
     "@types/retry": "^0.12.1",
-    "@types/sinon": "^9.0.11",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@typescript-eslint/parser": "^5.58.0",
     "chai": "^4.3.5",
@@ -86,7 +83,7 @@
     "typedoc": "^0.17.8",
     "typedoc-plugin-external-module-map": "1.2.1",
     "typedoc-plugin-nojekyll": "^1.0.1",
-    "typescript": "^4.4.4"
+    "typescript": "~5.1.0"
   },
   "publishConfig": {
     "access": "public"
