--- a/.depcheckrc.yml
+++ b/.depcheckrc.yml
@@ -12,3 +12,4 @@ ignores:
   - nock # Used by multiple files for testing to mock API calls
   - handlebars # Used by generation script to generate version.ts and top level index.ts files
   - fs-extra # Used by generation script and updateApis script
+  - tslib # Used by the TypeScript compiler
