update doc command to be in alignment with isomorphic SDK

--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "depcheck": "depcheck",
     "diffApis": "raml-toolkit diff --dir updateApisTmp/oldApis apis -f console -o updateApisTmp/oasDiff.txt -s oas",
     "doc": "npm run doc:generate && npm run doc:resources",
-    "doc:generate": "typedoc --mode modules --out ./docs renderedTemplates/** --tsconfig tsconfig.json --external-modulemap  \".*/renderedTemplates/([\\w\\-_]+)(?:/.*)?\" --excludeExternals",
+    "doc:generate": "typedoc --mode modules --out ./docs renderedTemplates/** --tsconfig tsconfig.json --external-modulemap  \".*/renderedTemplates/([\\w]+)\" --exclude \"renderedTemplates/index.ts\"",
     "doc:resources": "cp CHANGELOG.md ./docs",
     "lint": "npm run lint:dev -- --quiet",
     "lint:dev": "sort-package-json && eslint . --ext .ts --fix",
