rename generate oas script

--- a/.nycrc.json
+++ b/.nycrc.json
@@ -5,7 +5,7 @@
   "exclude": [
     "src/updateApis.ts",
     "src/lib/config.ts",
-    "src/generate-oas.ts",
+    "src/generateOas.ts",
     "src/static/helpers/index.ts",
     "src/lib/utils.ts"
   ],
