--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "clean": "rm -rf renderedTemplates dist",
     "compile": "tsc && eslint dist --ext .ts,.js --quiet --fix",
     "depcheck": "depcheck",
-    "diffApis": "raml-toolkit diff --dir updateApisTmp/oldApis apis -f console -o updateApisTmp/oasDiff.txt -s oas",
+    "diffApis": "raml-toolkit diff --dir updateApisTmp/oldApis apis -f console -o updateApisTmp/oasDiff.txt -s oas --normalize-directory-names",
     "doc": "npm run doc:generate && npm run doc:resources",
     "doc:generate": "typedoc --mode modules --out ./docs renderedTemplates/** --tsconfig tsconfig.json --external-modulemap  \".*/renderedTemplates/([\\w]+)\" --exclude \"renderedTemplates/index.ts\"",
     "doc:resources": "cp CHANGELOG.md ./docs",
@@ -33,11 +33,12 @@
     "prepack": "npm run build",
     "prepare": "snyk protect",
     "renderTemplates": "PACKAGE_VERSION=$(node -p \"require('./package.json').version\") ts-node src/generate-oas.ts",
+    "removeInternalOas": "ts-node src/removeInternalOas.ts",
     "snyk:auth": "snyk auth",
     "pretest": "npm run lint && npm run depcheck",
     "test": "nyc mocha \"src/**/*.test.ts\"",
     "test:ci": "npm test -- --reporter=xunit --reporter-options output=./reports/generator.xml",
-    "updateApis": "npm run backupApis && ts-node src/updateApis.ts && npm run diffApis"
+    "updateApis": "npm run removeInternalOas && npm run backupApis && ts-node src/updateApis.ts && npm run removeInternalOas && npm run diffApis"
   },
   "mocha": {
     "file": [
