update raml toolkit version

--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "tslib": "^2.4.1"
   },
   "devDependencies": {
-    "@commerce-apps/raml-toolkit": "file:../raml-toolkit",
+    "@commerce-apps/raml-toolkit": "^0.8.0",
     "@istanbuljs/nyc-config-typescript": "^1.0.2",
     "@types/mocha": "^8.2.3",
     "@types/node-fetch": "^2.5.12",
