update test files and lint

--- a/.nycrc.json
+++ b/.nycrc.json
@@ -6,6 +6,7 @@
     "src/updateApis.ts",
     "src/lib/config.ts",
     "src/generate-oas.ts",
+    "src/removeInternalOas.ts",
     "src/static/helpers/index.ts",
     "src/lib/utils.ts"
   ],
