--- a/package.json
+++ b/package.json
@@ -32,12 +32,13 @@
     "lint:dev": "sort-package-json && eslint . --ext .ts --fix",
     "prepack": "npm run build",
     "prepare": "snyk protect",
+    "removeInternalOas": "ts-node src/removeInternalOas.ts",
     "renderTemplates": "PACKAGE_VERSION=$(node -p \"require('./package.json').version\") ts-node src/generate-oas.ts",
     "snyk:auth": "snyk auth",
     "pretest": "npm run lint && npm run depcheck",
     "test": "nyc mocha \"src/**/*.test.ts\"",
     "test:ci": "npm test -- --reporter=xunit --reporter-options output=./reports/generator.xml",
-    "updateApis": "npm run backupApis && ts-node src/updateApis.ts && npm run diffApis"
+    "updateApis": "npm run removeInternalOas && npm run backupApis && ts-node src/updateApis.ts && npm run removeInternalOas && npm run diffApis"
   },
   "mocha": {
     "file": [
@@ -55,7 +56,7 @@
     "tslib": "^2.4.1"
   },
   "devDependencies": {
-    "@commerce-apps/raml-toolkit": "^0.7.0",
+    "@commerce-apps/raml-toolkit": "^0.8.0",
     "@istanbuljs/nyc-config-typescript": "^1.0.2",
     "@types/mocha": "^8.2.3",
     "@types/node-fetch": "^2.5.12",
