--- a/package.json
+++ b/package.json
@@ -25,9 +25,10 @@
     "compile": "tsc && eslint dist --ext .ts,.js --quiet --fix",
     "depcheck": "depcheck",
     "diffApis": "raml-toolkit diff --dir updateApisTmp/oldApis apis -f console -o updateApisTmp/oasDiff.txt -s oas",
-    "doc": "npm run doc:generate && npm run doc:resources",
+    "doc": "npm run generateVersionTable && npm run doc:generate && npm run doc:resources",
     "doc:generate": "typedoc --mode modules --out ./docs renderedTemplates/** --tsconfig tsconfig.json --external-modulemap  \".*/renderedTemplates/([\\w]+)\" --exclude \"renderedTemplates/index.ts\"",
     "doc:resources": "cp CHANGELOG.md ./docs",
+    "generateVersionTable": "ts-node --compiler-options '{\"module\": \"commonjs\", \"target\": \"ES6\" }' ./src/generateVersionTable.ts",
     "lint": "npm run lint:dev -- --quiet",
     "lint:dev": "sort-package-json && eslint . --ext .ts --fix",
     "prepack": "npm run build",
